make sure that tweets have text wrap, inital-tweets.json: server generates new data everytime for these tweets

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -27,6 +27,8 @@ article.tweet .tweet_post_text {
   border-bottom: 5px solid #545149;
   font-size: 24px;
   font-family: "Source Sans 3", sans-serif;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 article.tweet img {
